# pytest-llm

./: .gitignore  EXAMPLES.md  IMPLEMENTATION.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
pytest_llm/: __init__.py
src/pytest_llm/: __init__.py  plugin.py
tests/: conftest.py  test_edge_cases.py  test_failing.py  test_plugin.py
