[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-llm"
version = "0.1.0"
description = "Fast AI reliability test suite - A pytest plugin for testing LLM outputs with success rate thresholds"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Johannes Maron"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0.0",
]

[project.entry-points.pytest11]
pytest_llm = "pytest_llm.plugin"

[project.urls]
Homepage = "https://github.com/codingjoe/pytest-llm"
Repository = "https://github.com/codingjoe/pytest-llm"

[tool.setuptools.packages.find]
where = ["src"]
